# Easy-Factor-Graph

./: .gitignore  .gitmodules  CMakeLists.txt  EFG.sln  Makefile  README.md  gpp_make.bat
Lib/: CMakeLists.txt
Lib/EFG/: CMakeLists.txt
Lib/EFG/Header/: Belief_propagation.h  CategoricVariable.h  Categoric_Variable.h  Combination.h  Distribution.h  Error.h  ErrorRaiser.h  Graphical_model.h  Node.h  Observed_Subject.h  Potential.h  Trainer.h  Training_set.h  univocal_map.h
Lib/EFG/Source/: Belief_propagation.cpp  CategoricVariable.cpp  Categoric_Variable.cpp  Combination.cpp  Distribution.cpp  Error.cpp  ErrorRaiser.cpp  Graphical_model.cpp  Learning_handler.cpp  Node.cpp  Node_Import_Export.cpp  Potential.cpp  Subgraph.cpp  Trainer.cpp  Training_set.cpp
Lib/EFG/cmake/: Easy-Factor-GraphConfig.cmake.in
Lib/EFG_old/: CMakeLists.txt
Lib/EFG_old/Source/: CategoricVariable.cpp
Lib/Header/: Component.h
Lib/Header/categoric/: Variable.h
Lib/Header/io/: Importer.h
Lib/Header/iterator/: Forward.h
Lib/Header/model/: ConditionalRandomField.h  Graph.h  RandomField.h
Lib/Header/structure/: InsertCapable.h
Lib/Header/train/: Trainable.h  Trainer.h
Lib/Source/categoric/: Combination.cpp  Group.cpp  Variable.cpp
Lib/Source/io/: FilePath.cpp
Lib/Source/structure/: GibbsSampler.cpp  InserterTunableCapable.cpp  Node.cpp
Lib/Source/train/: Trainable.cpp
Lib/Thread_Pool/: CMakeLists.txt
Lib/Thread_Pool/cmake/: Thread-PoolConfig.cmake.in
Lib/Thread_Pool/header/: EquiPool.h  PrioritizedPool.h  ThreadPool.h
Lib/Thread_Pool/src/: EquiPool.cpp  PrioritizedPool.cpp  QueueStrategy.h  ThreadPool.cpp
Lib/XML_Manager/: CMakeLists.txt  XML_Manager.cpp
Lib/XML_Manager/cmake/: XML_ManagerConfig.cmake.in
Samples/: CMakeLists.txt  Sample01-1-Variables.cpp  Sample01-2-Factors.cpp  Sample01-Factors.cpp  Sample01-Variables.cpp  Sample02-BeliefPropagation-A.cpp  Sample02-BeliefPropagation.cpp  Sample02-Factors.cpp  Sample04-HMM-chain.cpp  Sample05-Matricial.cpp  Utilities.h
Samples/Sample03-BeliefPropagation-B/: Sample03-BeliefPropagation-B.cpp  graph_2.xml
Samples/Sample06-Learning-A/: Sample06-Learning-A.cpp
Samples/Sample07-Learning-B/: Sample07-Learning-B.cpp
Samples/Sample08-Subgraphing/: Sample08-Subgraphing.cpp
Samples/Sample_01_Potential_handling/: Main_01.cpp
Samples/Sample_02_Belief_propagation_A/: Main_02.cpp
Samples/Sample_03_Belief_propagation_B/: Main_03.cpp
Samples/Sample_03_Belief_propagation_B/Sample_03_graphs/: binary_shape.txt  graph_1.xml
Samples/Sample_04_HMM_chain/: Main_04.cpp
Samples/Sample_05_Graph_Matrix/: Main_05.cpp
Samples/Sample_06_Learning_A/: Main_06.cpp
Samples/Sample_06_Learning_A/Sample_06_graphs/: graph_3.xml
Samples/Sample_07_Learning_B/: Main_07.cpp
Samples/Sample_08_subgraph_operation/: Main_08.cpp
Samples/Utils/: CMakeLists.txt
Samples/Utils/Header/: CombinationMaker.h  EmpiricalFrequencies.h  Frequencies.h  Presenter.h  TrainSetCreator.h  Utilities.h
Samples/Utils/Source/: EmpiricalFrequencies.cpp  Frequencies.cpp  Presenter.cpp  TrainSetCreator.cpp
Tests/: CMakeLists.txt  FactorDescription  Test01-Range.cpp  Test02-Distribution.cpp  Test02-Distributions.cpp  Test03-DistributionFinder.cpp  Test04-FactorSetting.cpp  Test06-Evidences.cpp  Test06-Insertions.cpp  Test07-Evidences.cpp  Test07-Insertions.cpp  Test08-BeliefPropagation.cpp  Test09-Gibbs.cpp  Test10-Learning.cpp  Test11-ThreadPoolEfficiency.cpp
Tests/Utils/: CMakeLists.txt
Tests/Utils/Header/: ComplexPolitree.h  DistributionSamples.h  Models.h
Tests/Utils/Source/: DistributionCompare.cpp  DistributionSamples.cpp
samples/: CMakeLists.txt  ReadMe.cpp  Sample01-1-Variables.cpp  Sample01-2-Factors.cpp  Sample02-BeliefPropagation-A.cpp  Sample04-HMM-chain.cpp  Sample05-Matricial.cpp
samples/Helpers/: CMakeLists.txt  Frequencies.cpp  Frequencies.h  Printing.cpp  Printing.h  SampleSection.cpp  SampleSection.h
samples/Sample03-BeliefPropagation-B/: Sample03-BeliefPropagation-B.cpp  graph_1.xml  graph_2.xml  graph_3.xml  graph_4.xml
samples/Sample06-Learning-A/: Sample06-Learning-A.cpp
samples/Sample07-Learning-B/: Sample07-Learning-B.cpp  cond_graph.xml
samples/Sample08-Subgraphing/: Sample08-Subgraphing.cpp
samples/Utils/: CMakeLists.txt
samples/Utils/Source/: CombinationMaker.cpp  TrainSetCreator.cpp
src/: CMakeLists.txt
src/header/EasyFactorGraph/: Component.h  Error.h
src/src/: Error.cpp
src/src/categoric/: Combination.cpp  Group.cpp  GroupRange.cpp  Variable.cpp
src/src/distribution/: CombinationFinder.cpp  Distribution.cpp  DistributionConcrete.cpp  DistributionSetter.cpp  Factor.cpp  FactorExponential.cpp  Finder.cpp
src/src/factor/: Factor.cpp  FactorExponential.cpp  Function.cpp  ImageFinder.cpp  Immutable.cpp  Mutable.cpp
src/src/io/: FactorImporter.cpp  File.cpp  FilePath.cpp  ImportUtils.cpp  ImportUtils.h  TrainSetImport.cpp  TrainSetImporter.cpp  Utils.cpp  Utils.h
src/src/model/: ConditionalRandomField.cpp  Graph.cpp  HiddenObservedHandler.cpp  HiddenObservedHandler.h  HiddenObservedTuner.cpp  HiddenObservedTuner.h  RandomField.cpp
src/src/structure/: BaselineBeliefPropagator.cpp  BaselineLoopyPropagator.cpp  BeliefAware.cpp  BeliefPropagationUtils.cpp  BeliefPropagationUtils.h  Message.cpp  (+22 more)
tests/: .gitignore  CMakeLists.txt  FactorDescription  ModelLibrary.cpp  ModelLibrary.h  ReadMe.md  Test01-Range.cpp  Test02-Distribution.cpp  Test02-Function-a.cpp  Test02-Function-b.cpp  Test03-DistributionFinder.cpp  Test03-Factor.cpp  Test03-SpecialFactor.cpp  Test04-FactorSetting.cpp  Test04-Insertions.cpp  Test05-Evidences.cpp  Test05-FactorConstruction.cpp  Test05-SpecialFactorsConstruction.cpp  Test06-BeliefPropagation.cpp  Test06-IO.cpp  Test06-Insertions.cpp  Test07-BeliefPropagation.cpp  Test07-Evidences.cpp  Test07-Pool.cpp  Test08-BeliefPropagation.cpp  Test08-Gibbs.cpp  Test09-Gibbs.cpp  Test09-Gradient.cpp  Test09-Learning.cpp  Test09-ThreadPoolEfficiency.cpp  Test10-Learning.cpp  Test11-ThreadPoolEfficiency.cpp  Utils.cpp  Utils.h  launch.bat  launch.sh  tests.py
tests/Utils/: CMakeLists.txt
(+963 files in other folders)
